Update SCSS, fix bug where code annotations had wrong font.

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -327,7 +327,6 @@ html, body {
     float:right;
     clear:right;
 
-    @extend %code-font;
     @include box-sizing(border-box);
     @include text-shadow(0px 1px 2px rgba(0,0,0,0.4));
 
@@ -338,6 +337,10 @@ html, body {
       text-decoration: none;
       border-bottom: dashed 1px #ccc;
     }
+  }
+
+  pre {
+    @extend %code-font;
   }
 
   blockquote {
